--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^2.6.14",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.5.1"
+    "axios": "0.26.1",
+    "core-js": "3.8.3",
+    "vue": "2.7.9",
+    "vue-class-component": "7.2.3",
+    "vue-property-decorator": "9.1.2",
+    "vue-router": "3.5.1",
+    "vuex": "3.6.2",
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -27,7 +30,10 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^9.0.0",
     "prettier": "^2.4.1",
+    "sass-loader": "^13.3.0",
+    "style-loader": "^3.3.3",
     "typescript": "~4.5.5",
     "vue-template-compiler": "^2.6.14"
   }
