--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
+    "@types/webpack-env": "^1.18.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
